# satin

./: .gitignore  CMakeLists.txt  TODO.txt  template_game_state.c  unity_build.c
data/: Shaders.metal  fill.frag  fill.vert  gui.vert  gui_120.vert  gui_circle.frag  gui_circle_120.frag  gui_color_rect.frag  gui_color_rect_120.frag  gui_rect.frag  gui_rect_120.frag  gui_triangle.frag  gui_triangle_120.frag  line.frag  line_120.vert  mesh.frag  mesh.vert  mesh_color.frag  sprite.frag  sprite.vert  sprite_120.frag  sprite_120.vert
src/: engine.c  engine.h  game_states.c  game_states_enum.h  vn_gl.h
src/graphics/: graphics.c  graphics.h
src/graphics/metal/: graphics.m
src/graphics/opengl/: graphics.c  opengl_graphics.c
src/graphics/tikz/: tikz_graphics.c  tikz_graphics.h
src/gui/: gui.c  gui.h  nuklear.h  vintr_gui.c
src/opengl/: glext.h  opengl.h  opengl_funcs.h
src/opengl/gnu/: opengl.c
src/opengl/osx/: opengl.c
src/opengl/win32/: opengl.c
src/os/: os.h  win32.h
src/os/emscripten/: os.c
src/os/gnu/: os.c
src/os/ios/: os.m
src/os/osx/: key_codes.h  os.m
src/os/win32/: key_codes.h  os.c
src/renderer/: renderer.h
src/window/: window.h
src/window/emscripten/: window.c
src/window/osx_metal/: window.m
src/window/osx_opengl/: window.c
src/window/win32_opengl/: window.c
